# ds-u1-a2-a-Ramos811

./: .gitignore  CMakeLists.txt  COMIENCE_AQUI.txt  DISENO.md  GUIA_RAPIDA.txt  INDICE.txt  INSTALACION.md  PROYECTO_COMPLETO.txt  README.md  RESUMEN_EJECUCION.txt  RESUMEN_FINAL.txt  compilar.bat  compilar.sh  ejemplos.cpp
include/: Carga.h  Placa.h
src/: Carga.cpp  main.cpp
